--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="https://mtefagh.github.io/favicon.ico">
 <title>Mojtaba Tefagh</title>
 
-		<link href="./Mojtaba Tefagh_files/css" rel="stylesheet">
+		<link href="https://mtefagh.github.io/css" rel="stylesheet">
 		<link rel="stylesheet" href="./Mojtaba Tefagh_files/bootstrap.min.css">
 		<link rel="stylesheet" href="./Mojtaba Tefagh_files/style.css">
 		<link rel="stylesheet" href="./Mojtaba Tefagh_files/main.css">
@@ -28,8 +28,8 @@
 <a href="http://37.152.182.109/" class="btn btn-secondary">Go to the ABCD demo</a>
 </div>
 </div>
-		<script src="./Mojtaba Tefagh_files/jquery.min.js.download"></script>
-		<script src="./Mojtaba Tefagh_files/bootstrap.bundle.min.js.download"></script>
-		<script src="./Mojtaba Tefagh_files/moment.js.download"></script>
-		<script src="./Mojtaba Tefagh_files/particles.min.js.download"></script>
-		<script src="./Mojtaba Tefagh_files/particles-custom-error.js.download"></script><script>mendeleyWebImporter = { open: function () { window.postMessage('0.45793677105087705', 'http://alum.sharif.edu') } }</script></body></html>
+		<script src="https://mtefagh.github.io/jquery.min.js.download"></script>
+		<script src="https://mtefagh.github.io/bootstrap.bundle.min.js.download"></script>
+		<script src="https://mtefagh.github.io/moment.js.download"></script>
+		<script src="https://mtefagh.github.io/particles.min.js.download"></script>
+		<script src="https://mtefagh.github.io/particles-custom-error.js.download"></script><script>mendeleyWebImporter = { open: function () { window.postMessage('0.45793677105087705', 'http://alum.sharif.edu') } }</script></body></html>
