--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html class="no-js" style="" lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="https://mtefagh.github.io/favicon.ico" />
+<link rel="shortcut icon" href="favicon.ico">
 <title>ABCD</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Girassol|ZCOOL+KuaiLe&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://mtefagh.github.io/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://mtefagh.github.io/fonts/style.css">
-		<link rel="stylesheet" href="https://mtefagh.github.io/css/main.css">
-		<link rel="stylesheet" href="https://mtefagh.github.io/particles/particles.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="fonts/style.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="particles/particles.css">
 
 <meta http-equiv="refresh" content="10;url=http://37.152.182.109/">
 </head>
@@ -28,8 +28,8 @@
 <a href="http://37.152.182.109/" class="btn btn-secondary">Go to the ABCD demo</a>
 </div>
 </div>
-		<script src="https://mtefagh.github.io/js/jquery.min.js"></script>
-		<script src="https://mtefagh.github.io/js/bootstrap.bundle.min.js"></script>
-		<script src="https://mtefagh.github.io/js/moment.js"></script>
-		<script src="https://mtefagh.github.io/particles/particles.min.js"></script>
-		<script src="https://mtefagh.github.io/particles/particles-custom-error.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.bundle.min.js"></script>
+		<script src="js/moment.js"></script>
+		<script src="particles/particles.min.js"></script>
+		<script src="particles/particles-custom-error.js"></script>
